@@ -163,13 +163,6 @@ config NOR_BANK0_LENGTH
 	default "0x00800000" if MACH_NSLU2
 	depends on NOR_BANK0
 
-config ENV_STARTUP
-	string "Extra commands for startup"
-	help
-	  This string is added to the default startup command string.
-	  This is generally not needed, but the facility is available
-	  ust in case.
-
 config DISABLE_SECOND_UART_INIT
 	bool "Disable initialization of second UART"
 	help
