@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:01 2007
+# Mon Jun 25 16:41:56 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV5=y
@@ -47,7 +47,6 @@ CONFIG_NOR_BUSWIDTH=16
 CONFIG_NOR_BANK0=y
 CONFIG_NOR_BANK0_START=0x50000000
 CONFIG_NOR_BANK0_LENGTH=0x00800000
-CONFIG_ENV_STARTUP=""
 CONFIG_MACH="ixp42x"
 CONFIG_RAMDISK_SIZE=0x00400000
 CONFIG_MACH_NSLU2=y
@@ -139,6 +138,8 @@ CONFIG_ENV_STARTUP_KERNEL_COPY=y
 CONFIG_ENV_REGION_KERNEL_SWAP=y
 CONFIG_ENV_STARTUP_RAMDISK_COPY=y
 CONFIG_ENV_REGION_RAMDISK_SWAP=y
+CONFIG_ENV_STARTUP_PREFIX_P=y
+CONFIG_ENV_STARTUP_PREFIX="sdram-init; memscan -u 0+256m"
 
 #
 #    Regions
