@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:06 2007
+# Mon Jun 25 16:41:58 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -57,7 +57,6 @@ CONFIG_NOR_BANK0=y
 CONFIG_NOR_BANK0_START=0x44000000
 CONFIG_NOR_BANK0_LENGTH=0x00400000
 # CONFIG_NOR_BANK1 is not set
-CONFIG_ENV_STARTUP="emac mac 00:08:ee:00:51:e1;"
 
 #
 # Platform Drivers
@@ -158,6 +157,8 @@ CONFIG_NOR_BOOT=y
 # CONFIG_AUTOBOOT is not set
 CONFIG_ENV_STARTUP_KERNEL_COPY=y
 # CONFIG_ENV_REGION_KERNEL_SWAP is not set
+CONFIG_ENV_STARTUP_PREFIX_P=y
+CONFIG_ENV_STARTUP_PREFIX="emac mac 00:08:ee:00:51:e1"
 
 #
 #    Regions
