@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:06 2007
+# Mon Jun 25 16:41:57 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -55,7 +55,6 @@ CONFIG_NOR_BANK0_LENGTH=0x00800000
 CONFIG_NOR_BANK1=y
 CONFIG_NOR_BANK1_START=0x45000000
 CONFIG_NOR_BANK1_LENGTH=0x00800000
-CONFIG_ENV_STARTUP=""
 
 #
 # Platform Drivers
@@ -128,6 +127,7 @@ CONFIG_NOR_BOOT=y
 # CONFIG_AUTOBOOT is not set
 CONFIG_ENV_STARTUP_KERNEL_COPY=y
 # CONFIG_ENV_REGION_KERNEL_SWAP is not set
+# CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
 #    Regions
