@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:07 2007
+# Mon Jun 25 16:41:58 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -54,7 +54,6 @@ CONFIG_NOR_BUSWIDTH=16
 CONFIG_NOR_BANK0=y
 CONFIG_NOR_BANK0_START=0x40000000
 CONFIG_NOR_BANK0_LENGTH=0x00400000
-CONFIG_ENV_STARTUP=""
 
 #
 # Platform Drivers
@@ -134,6 +133,7 @@ CONFIG_ENV_STARTUP_KERNEL_COPY=y
 # CONFIG_ENV_REGION_KERNEL_SWAP is not set
 CONFIG_ENV_STARTUP_RAMDISK_COPY=y
 # CONFIG_ENV_REGION_RAMDISK_SWAP is not set
+# CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
 #    Regions
