@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:12 2007
+# Mon Jun 25 16:42:00 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -149,6 +149,7 @@ CONFIG_ENV_CHECK_LEN=32
 # CONFIG_ONENAND_BOOT is not set
 CONFIG_COMPANION_EVT1_BOOT=y
 # CONFIG_COMPANION_EVT2_BOOT is not set
+# CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
 #    Regions
