@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:10 2007
+# Mon Jun 25 16:41:59 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -168,6 +168,7 @@ CONFIG_NOR_BOOT=y
 # CONFIG_AUTOBOOT is not set
 CONFIG_ENV_STARTUP_KERNEL_COPY=y
 # CONFIG_ENV_REGION_KERNEL_SWAP is not set
+# CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
 #    Regions
