@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Sun Jun  3 16:30:14 2007
+# Mon Jun 25 16:42:01 2007
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -44,7 +44,6 @@ CONFIG_NOR_BUSWIDTH=16
 CONFIG_NOR_BANK0=y
 CONFIG_NOR_BANK0_START=0x00000000
 CONFIG_NOR_BANK0_LENGTH=0x04000000
-CONFIG_ENV_STARTUP=""
 CONFIG_MACH="s3c2410"
 CONFIG_RAMDISK_SIZE=0x00100000
 CONFIG_MACH_M7200=y
@@ -125,6 +124,7 @@ CONFIG_ENV_STARTUP_KERNEL_COPY=y
 # CONFIG_ENV_REGION_KERNEL_SWAP is not set
 CONFIG_ENV_STARTUP_RAMDISK_COPY=y
 # CONFIG_ENV_REGION_RAMDISK_SWAP is not set
+# CONFIG_ENV_STARTUP_PREFIX_P is not set
 
 #
 #    Regions
