@@ -1,3 +1,11 @@
+2007-06-25  Marc Singer  <elf@cerise.buici.com>
+
+	* usr/apex-env.cc: Added release and region commands for probing
+	the APEX environment.
+
+	* src/apex/env.c: Added prefix option to the startup command.
+	Removed crufty old ENV_STARTUP option that was mach specific.
+
 2007-06-03  Marc Singer  <elf@cerise.buici.com>
 
 	* src/arch-arm/entry/apex.lds.S: Renamed some of the sections to
